# cutPIC

./: CMakeLists.txt  header.h  img.c  img.h  main.c  pixel.c  pixel.h
